# swagger.json
@@ -36,7 +36,7 @@
             "name": "id",
             "required": false,
             "in": "query",
-            "example": "0c2b7220-b0b8-4c47-9f67-d5b34ed123a1",
+            "example": "95d82ef2-34fd-4510-b2bf-03d8662d0e09",
             "schema": {
               "type": "string"
             }
@@ -46,7 +46,12 @@
           "200": {
             "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "access-token": []
+          }
+        ]
       }
     },
     "/createUser": {
@@ -67,13 +72,18 @@
           "201": {
             "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "access-token": []
+          }
+        ]
       }
     }
   },
   "info": {
     "title": "base-nestjs-mysql API spec",
-    "description": "Api Service | [swagger.json](/docs/service/swagger.json) | [swagger-2.0.json](swagger-2.0.json)",
+    "description": "Api Service | [swagger.json](/docs/service/swagger.json) | \n      [swagger-2.0.json](/docs/service/swagger-2.0.json)",
     "version": "1.99.2",
     "contact": {}
   },
